Probando con @media para hacer responsive mi página

--- a/style.css
+++ b/style.css
@@ -110,3 +110,27 @@ main {
     height: 40px;
     padding-top: 20px;
 }
+
+@media screen and (max-width: 980px){
+    #contenedor{
+        width: 90%;
+    }
+    #contenido{
+        width: 60%;
+    }
+    #barra_lateral{
+        width:30%;
+    }
+}
+
+@media screen and (max-width: 480px){
+    #encabezado{
+        height: auto;
+    }
+    #contenido{
+        width: auto;
+    }
+    #barra_lateral{
+        display:none;
+    }
+}
