--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 *{
-    margin: 0;
-    padding: 0;
     font-family: 'Itim';
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 header, body{
@@ -20,8 +18,8 @@ header, body{
 
 main {
     display: flex;
-    margin-bottom: 50px;
-    margin-left: 180px;
+    margin-bottom: 10px;
+    margin-left: 80px;
 }
 
 .text-area {
@@ -30,7 +28,7 @@ main {
     border: none;
     color: #440b4e;
     margin-top: 30px;
-    padding: 2px;
+    padding: 10px;
     text-transform: lowercase;
 }
 
@@ -42,17 +40,19 @@ main {
 
 .mensaje {
     height: 400px;
+    width: 400px;
     background: #34032c;
     background-image: url("imagenes/feminism2.png");
     background-repeat: no-repeat;
-    background-position: 10px;
+    background-size: 400px 350px;
+    background-position: center;
     border: none;
     border-radius: 24px;
     color: #cd09ac;
     margin-left: 98px;
     margin-top: 20px;
-    padding-left: 20px;
-    position: fixed;
+    padding: 10px;
+    text-transform: lowercase;
 }
 
 .mensaje:focus {
@@ -81,7 +81,7 @@ main {
     color:rgb(52, 3, 44);
     cursor: pointer;
     height: 67px;
-    margin-left: 30px;
+    margin-left: 20px;
     width: 328px;
 }
 
@@ -91,8 +91,8 @@ main {
     color: rgb(52, 3, 44);
     cursor: pointer;
     height: 67px;
-    margin-left: 110px;
-    margin-top: 460px;
+    margin-left: 130px;
+    margin-top: 25px;
     position: absolute;
     width: 336px;
 }
@@ -101,6 +101,7 @@ main {
     color: rgb(52, 3, 44);
     font-size: 25px;
     text-align: center;
+    margin-bottom: 18px;
 }
 
 .copyrigth {
@@ -111,32 +112,53 @@ main {
     color: rgb(52, 3, 44);
     height: 40px;
     padding-top: 20px;
-}
-
-footer {
     width: 90%;
 }
 
-/*@media screen and (max-width: 980px){
-    #contenedor{
-        width: 90%;
+@media screen and (max-width:480px){
+    .logo{
+        width: 20%;
+        padding: 20px;
     }
-    #contenido{
-        width: 60%;
+    main{
+        flex-direction: column;
+        align-items: center;
+        margin-left: 20px;
+        margin-right: 20px;
     }
-    #barra_lateral{
-        width:30%;
+    .text-area, .mensaje{
+        font-size: 25px;
+        width: 300px;
     }
+    .botones{
+        justify-content: space-evenly;
+    }
+    .copiar{
+        padding: 20px;
+        margin: 5px;
+    }
+    .btn-encriptar, .btn-desencriptar{
+        width: 150px;
+        height: 54px;
+        font-size: 20px;
+    }
+    .copiar{
+        margin-left: 75px;
+        margin-right: 75px;
+        width: 150px;
+        height: 54px;
+        font-size: 20px;
+    }
+    footer{
+        margin-top: 50px;
+    } 
 }
-
-@media screen and (max-width: 480px){
-    #encabezado{
-        height: auto;
+/*@media  and (max-width: 300px){
+    .flex-container{
+        flex-direction: column;
+        flex-basis: 200%;
     }
-    #contenido{
-        width: auto;
-    }
-    #barra_lateral{
-        display:none;
+    .flex-container div{
+        flex-basis: 100%;
     }
 }
